src/objects/qbdialer__UserStatusLog__c.object
<CustomObject>
    <fields>
        <fullName>qbdialer__AgentStatus__c</fullName>
        <label>Agent Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSalesId__c</fullName>
        <externalId>true</externalId>
        <label>InsideSalesId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__StatusDate__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Status Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qbdialer__StatusDuration__c</fullName>
        <label>Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Status Log</label>
    <listViews>
        <fullName>qbdialer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Status Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>